[package]
name = "lares"
version = "0.2.3"
authors = ["Zeyi Fan <cargo@zeyi.fan>"]
edition = "2018"
description = "Simple RSS Reader Service (Fever API backend)"
license = "MIT"
homepage = "https://github.com/fanzeyi/lares"
readme = "README.md"
keywords = ["rss", "rssreader", "fever"]
categories = []                                               # :(

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"

[dependencies]
rusqlite = { version = "0.28", features = ["array", "bundled", "chrono"] }
tide = "0.16.0"
async-std = { version = "1.12", features = ["attributes", "unstable"] }
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
thiserror = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
anyhow = "1.0.62"
surf = "2.3.2"
prettytable-rs = "0.9.0"
futures = "0.3.23"
chrono = "0.4.22"
md-5 = "0.10.1"
feed-rs = "1.1.0"
serde_urlencoded = "0.7.1"
quick-xml = "0.23.0"
log = "0.4.17"
femme = "2.2.1"
url = "2.2.2"
either = "1.8.0"
http = "0.2.8"

[dev-dependencies]
rand = "0.7"
tempfile = "3"
assert_cmd = "1.0.1"
